# code_assistant

./: .gitignore  pyproject.toml  requirements.txt
agent/: prompt_templates.py
src/agent/: agent.py  agent_model.py  generate_code_graph.py  prompt_templates.py  state.py
src/agent/utils/: prompt_template.py
src/api/: api.py
src/api/__test__/e2e/: users_tests.py
src/api/core/database/: sessions.py
src/api/core/decorators/: log_errors.py  service_error_handler.py
src/api/core/dependencies/: configure_container.py  container.py
src/api/core/logs/: logger.py
src/api/core/middleware/: auth_middleware.py  middleware_service.py  verification_middleware.py
src/api/core/repository/: base_repository.py
src/api/core/services/: email_service.py  embedding_service.py  encryption_service.py  hashing_service.py  http_service.py  request_validation_service.py  webtoken_service.py
src/api/modules/agents/: agents_controller.py  agents_dependencies.py  agents_models.py  agents_routes.py  agents_service.py
src/api/modules/chats/: chats_controller.py  chats_dependencies.py  chats_models.py  chats_router.py  chats_routes.py  chats_service.py
src/api/modules/files/: files_controller.py  files_dependencies.py  files_models.py  files_routes.py  files_service.py
src/api/modules/users/: users_models.py  (+4 more)
src/service/: LCEL_langchain.py  Llm_service.py  Qdrant.py  Redis_service.py  check_typescript.py
src/src/agent/: generate_code_graph.py
src/tests/endtoend/: agent_test.py
src/utils/: Qdrant_ingestor.py
tests/e2e/: agents_tests.py  chat_tests.py  users_tests.py
(+9 files in other folders)
