[project]
name = "code-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.57.1",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "langchain-anthropic>=0.3.17",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.69",
    "langgraph>=0.5.3",
    "load-dotenv>=0.1.0",
    "poetry>=2.1.3",
    "qdrant-client>=1.14.3",
]
