[project]
name = "code-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.57.1",
    "bcrypt>=4.3.0",
    "bs4>=0.0.2",
    "cryptography>=45.0.5",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "langchain-anthropic>=0.3.17",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.69",
    "langgraph>=0.5.3",
    "load-dotenv>=0.1.0",
    "poetry>=2.1.3",
    "pyjwt>=2.10.1",
    "qdrant-client>=1.14.3",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.6",
    "typing-extensions>=4.14.1",
    "pytest>=8.4.1",
    "openai>=1.97.0",
    "redis>=6.2.0",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.28",
    "docx>=0.2.4",
    "pymupdf>=1.26.3",
]

[tool.poetry.dependencies]
psycopg2-binary = "^2.9"

